add update material
