# swagger.yaml
@@ -519,7 +519,46 @@ paths:
           description: Test unsuccessful
           schema:
             $ref: '#/definitions/ErrorResponse'
-     #-------//Delete material-------------------  
+     #-------//Delete material------------------- 
+     #-------update material-------------------  
+    put:
+      x-security-privilege: 'test:delete'
+      operationId: updateMaterial
+      description: Delete an Material by Id
+      tags:
+        - material
+      parameters:
+        - name: id
+          type: string
+          format: uuid
+          in: path
+          required: true
+        - name: material
+          description: material object
+          in: body
+          schema:
+            type: object
+            properties:
+              title:
+                type: string
+                description: 'title of the material'
+              link:
+                type: string 
+                description: 'link of the material'
+      responses:
+        '200':
+          description: Material deleted successful
+          schema:
+            $ref: '#/definitions/MaterialResponse'
+        '404':
+          description: Test unsuccessful
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        default:
+          description: Test unsuccessful
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+     #-------//update material-------------------   
 definitions:
   ErrorResponse:
     required:
